--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,12 +10,6 @@
             <h1>Welcome</h1>
             A web app will be here soon
         </div>
-        <div id="links">
-            <ul>
-                <li><a href="/competences">Cmpetences</a></li>
-                <li><a href="/users">Users</a></li>
-                <li><a href="/applications">Applications</a></li>
-            </ul>
-        </div>
-    </body>
+        <script src="js/dist/app.bundle.js"></script>
+</body>
 </html>
